--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/crudproject/.env
-/crudproject/crudproject/__pycache__
-/crudproject/crudapp/__pycache__
-/crudproject/crudapp/migrations
+/courseproject/.env
+/courseproject/courseproject/__pycache__
+/courseproject/courseapp/__pycache__
+/courseproject/courseapp/migrations
 .venv
